[gd_scene load_steps=14 format=2]

[ext_resource path="res://UI/PauseMenu/PauseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/blocking_dialog_box/blocking_input_box.gd" type="Script" id=2]
[ext_resource path="res://PixelInterface/Style/Stone.tres" type="StyleBox" id=3]
[ext_resource path="res://addons/blocking_dialog_box/blocking_dialog_box.gd" type="Script" id=4]
[ext_resource path="res://addons/blocking_dialog_box/blocking_list_selection.gd" type="Script" id=5]
[ext_resource path="res://UI/Fonts/Irishalini.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Characters/Arden/Arden.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/PauseMenu/MenuPopup.gd" type="Script" id=8]
[ext_resource path="res://World/LocalScene.gd" type="Script" id=10]
[ext_resource path="res://UI/Textures/advance-button1.png" type="Texture" id=13]
[ext_resource path="res://UI/Textures/advance-button2.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[sub_resource type="AnimatedTexture" id=2]
frames = 2
fps = 1.0
frame_0/texture = ExtResource( 13 )
frame_1/texture = ExtResource( 14 )
frame_1/delay_sec = 0.0

[node name="LocalScene" type="Node2D"]
script = ExtResource( 10 )

[node name="World" type="YSort" parent="."]

[node name="Player" parent="World" instance=ExtResource( 7 )]
position = Vector2( -3.2959, -9.58014 )

[node name="Camera2D" type="Camera2D" parent="World/Player"]
current = true

[node name="BlockingDialogBox" type="CanvasLayer" parent="."]
script = ExtResource( 4 )
font = SubResource( 1 )
height = 50
advance_texture = SubResource( 2 )

[node name="BlockingInputBox" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="BlockingListSelection" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="MenuLayer" type="CanvasLayer" parent="."]

[node name="MenuPopup" type="PopupPanel" parent="MenuLayer"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -120.0
margin_right = 160.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 3 )
popup_exclusive = true
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" parent="MenuLayer/MenuPopup" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 14.0
margin_right = -14.0
margin_bottom = -14.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="about_to_show" from="MenuLayer/MenuPopup" to="." method="_on_Menu_about_to_show"]
[connection signal="popup_hide" from="MenuLayer/MenuPopup" to="." method="_on_Menu_popup_hide"]
